--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,33 +1,37 @@
-.card{
-  border: 1px solid #F8F8F8;
-  padding: 20px;
-  width: 210px;
+.card {
+  border: 1px solid #f3f3f3;
+  padding: 30px;
+  width: 220px;
   border-radius: 40px;
   margin-right: 30px;
+  margin-bottom: 30px;
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
 
-  &:hover{
-    box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.06);
+  .plus {
+    cursor: pointer;
+  }
+
+  &:hover {
+    box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.06);
     transform: translateY(-5px);
   }
 
-  .favorite{
+  .favorite {
     position: absolute;
     cursor: pointer;
   }
 
-  span{
+  span {
     font-size: 13px;
     opacity: 0.5;
     text-transform: uppercase;
   }
 
-  b{
+  b {
     font-size: 14px;
-
   }
 
-  h5{
+  h5 {
     font-weight: 400;
     font-size: 14px;
   }
