--- a/src/index.scss
+++ b/src/index.scss
@@ -1,186 +1,159 @@
-
-
 body {
   margin: 0;
-  font-family:'Inter', system-ui;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #e7f6ff;
 }
 
-*{
+* {
   font-family: 'Inter', system-ui;
 }
-.wrapper{
-  background: #FFFFFF;
+
+.wrapper {
+  background: #ffffff;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
   border-radius: 20px;
   max-width: 1080px;
   margin: 50px auto;
-
 }
 
-header{
+header {
   border-bottom: 1px solid #eaeaea;
-  img{
+  img {
     margin-right: 15px;
   }
 
   h3,
-  p{
+  p {
     margin: 0;
   }
 }
 
-.content{
-  h1{
+.content {
+  h1 {
     margin: 0;
   }
 }
 
-
-
-.button{
-  background: #FFFFFF;
-  border: 1px solid #F2F2F2;
-  box-sizing: border-box;
-  border-radius: 8px;
-  height: 32px;
-  width: 32px;
-  cursor: pointer;
-}
-
-.search-block{
+.search-block {
   border: 1px solid #f3f3f3;
   border-radius: 10px;
-  padding: 0px 15px;
-  display: flex;
-  align-items: center;
+  padding: 0 15px;
 
   img{
     width: 14.25px;
     height: 14.25px;
+    margin-top: 15px;
+
   }
 
-  input{
+  input {
     border: 0;
     padding: 13px;
     font-size: 16px;
     width: 200px;
   }
 }
-.overlay{
+
+.overlay {
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
-  
 }
-.drawer{
+
+.drawer {
   display: flex;
   flex-direction: column;
   position: absolute;
   width: 420px;
   height: 100%;
   right: 0;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
   padding: 30px;
 
-  .items{
+  .items {
     flex: 1;
     overflow: auto;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
   }
 
-  h2{
+  h2 {
     margin: 0;
-  }
-  .remove-btn{
-    width: 32px;
-    height: 32px;
-    opacity: 0.5;
-    cursor: pointer;
-    transition: opacity 0.2s ease-in-out;
-
-    &:hover{
-      opacity: 1;
-    }
-  }
-  h2{
-    
-    margin: 0;
-    font-size: 24px;
   }
 }
 
-.cart-total-block{
-  ul{
+.cartTotalBlock {
+  ul {
+    display: block;
     margin-bottom: 40px !important;
-    li{
-    display: flex;
-    align-items: flex-end;
-    margin-bottom: 20px;
-     div{
-    flex: 1;
-    height: 1px;
-    border-bottom: 1px dashed #dfdfdf;
-    position: relative;
-    top: -4px;
-    margin: 0px 7px;
+
+    li {
+      display: flex;
+      align-items: flex-end;
+      margin-bottom: 20px;
+
+      div {
+        flex: 1;
+        height: 1px;
+        border-bottom: 1px dashed #dfdfdf;
+        position: relative;
+        top: -4px;
+        margin: 0 7px;
+      }
+    }
   }
- 
-  }
-  }
-  .greenButton{
+
+  .greenButton {
     position: relative;
 
-    &:hover{
-      img{
+    &:hover {
+      img {
         transform: translateX(5px);
       }
     }
-    img{
+
+    img {
       position: absolute;
       right: 30px;
       top: 20px;
-    transition: transform 0.15s ease-in-out;
-
+      transition: transform 0.15s ease-in-out;
     }
   }
-  
-  .greenButton{
+}
+
+.greenButton {
   width: 100%;
   height: 55px;
   background: #9dd558;
   border-radius: 18px;
   border: 0;
-  color: #FFFFFF;
+  color: #fff;
   font-size: 16px;
   font-weight: 500;
   cursor: pointer;
-  transition: background 0.2s ease-in-out;
+  transition: background 0.1s ease-in-out;
 
-  
+  &:hover {
+    background: lighten(#9dd558, 5%);
+  }
 
-  &:hover{
-    background: darken($color: #9dd558, $amount: 5%);
+  &:active {
+    background: darken(#9dd558, 5%);
   }
 }
-  }
 
-
-
-.cart-item{
+.cartItem {
   border: 1px solid #f3f3f3;
   border-radius: 20px;
   overflow: hidden;
   padding: 20px;
 
-  .cart-item-img{
+  .cartItemImg {
     height: 70px;
     width: 70px;
     background-size: contain;
@@ -188,20 +161,22 @@ header{
     background-repeat: no-repeat;
     margin-right: 20px;
   }
-  p{
+
+  p {
     font-size: 16px;
     margin: 0;
   }
 
-  b{
+  b {
     font-size: 14px;
   }
-  .remove-btn{
+
+  .removeBtn {
     opacity: 0.5;
     cursor: pointer;
-    transition: opacity 0.2s ease-in-out;
+    transition: opacity 0.15s ease-in-out;
 
-    &:hover{
+    &:hover {
       opacity: 1;
     }
   }
